--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "parcel": "^2.8.3",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3"
